CSS fixes, mostly for mobile, also summary story page
I moved the overflow scroll off of Entire Story and onto content, this way long paragraphs can be scrolled as well during the story.

Content has max height set to 100vh minus the fixed height of the top and bottom scrolls, ensuring the scrolls don't end up stretching the page vertically.

In mobile, the scrolltop and scrollbottom now have a max width of the page width.

I removed padding from the border in mobile, to again prevent horizontal scrolling.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -60,8 +60,6 @@ entirestory {
   padding: 1rem 4rem 2rem;
   color: #312300;
   font-family: 'Berkshire Swash', cursive;
-  max-height: 80vh;
-  overflow-y: scroll;
   text-align: justify;
 }
 
@@ -117,7 +115,9 @@ content {
   justify-content: center;
   max-width: 500px;
   min-width: 30ch;
-  height: auto;
+  max-height: calc(100vh - 245px);
+  overflow-y: auto;
+  
   text-align: center;
   align-items: center;
 }
@@ -381,8 +381,7 @@ nameentry:nth-of-type(6) {
   scrolltop,
   scrollbottom {
     height: 20px;
-    max-width: 500px;
-    min-width: 30ch;
+    max-width: 100vw;
     mask-image: url(/src/assets/torn-top-mask.png);
     -webkit-mask-image: url(/src/assets/torn-top-mask.png);
     background-image: url(/src/assets/black-felt.png);
@@ -405,5 +404,10 @@ nameentry:nth-of-type(6) {
   content {
     padding-top: 1rem;
     padding-bottom: 1rem;
+    overflow-y: scroll;
+  }
+
+  border {
+    padding: 0px;
   }
 }
